
FEATURE  Renamed 'roms_default_thumb' -> 'roms_default_icon' in Launchers.

FEATURE  Improve Retroplayer support.
         See https://forum.kodi.tv/showthread.php?tid=295463&pid=2620489#pid2620489
         and https://alwinesch.github.io/group__python__xbmcgui__listitem.html#ga0f1e91e1d5aa61d8dd0eac90e8edbf18

FEATURE  Audit Retroarch BIOSes in System directory.

WIP      Support for <Launcher_NFO> tag in XML configuration files.

WIP      Preserve path_title, path_snap, etc. when exporting a Launcher into an XML file.

WIP      Audit all launchers. Check if app exists, ROM path exits, artwork paths are configured,
         etc. When a user uses XML to import configurations it is easy to make a typo when
         writing directory names, etc. This command will report if AEL configuration is OK.

WIP      Add support for ScummVM platform in the Offline Scraper.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2629084#pid2629084

WIP      ROM scanner should be able to scrap all assets, not just the ones supported by the
         selected scraper. This will require a redesign of the current scraping engine.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2628383#pid2628383 and next post.

WIP      Add an option to suspend/resume joystick support at launch. This is to prevent Kodi
         and the launched app to grab joystick events.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2627128#pid2627128

FEATURE  Removed ElementTree dependency in addon.xml. It's not longer needed.
         AEL ONLY WORKS ON KRYPTON NOW!!!

FEATURE  Use the <news> tag in addon.xml. In general, have a look at http://kodi.wiki/view/addon.xml
         and modernise addon.xml.

FEATURE  Update code to use new xbmcgui.Dialog().select() useDetails parameter. Get rid of the 
         ImgSelectDialog() class. This need Krypton Beta 4 to run!
         See https://forum.kodi.tv/showthread.php?tid=250936&pid=2438074#pid2438074
